some css issues

--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body {
 }
 
 .progressBar {
-  background-color: #888844;
+  background-color: #FF7F50;
   height: 15px;
   border: 0;
   border-radius: 9px;
